--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "cy:run": "cypress run",
     "cy:open": "cypress open",
     "test": "npm run build && node test/runtest.js",
-    "test:dev": "export MODE=dev && npm run build && node test/runtest.js"
+    "test:dev": "export MODE=dev && npm run build && node test/runtest.js",
+    "trpatcher": "export MODE=dev && npm run build && cd test/testrepo && node --unhandled-rejections=strict --enable-source-maps ../../bin/patcher.js"
   },
   "repository": {
     "type": "git",
@@ -34,8 +35,9 @@
   },
   "dependencies": {
     "ansi-colors": "^4.1.1",
-    "fs-extra": "^9.0.0",
     "fetch-repo-dir": "^1.0.4",
+    "fs-extra": "^9.0.0",
+    "node-watch": "^0.6.3",
     "sade": "^1.7.3"
   }
 }
