--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "patcher",
+  "name": "trpatcher",
   "version": "1.0.0",
   "description": "Tool to fetch official Svelte site, apply translation patch and run translated site ",
   "main": "bin/patcher.js",
@@ -8,36 +8,35 @@
   },
   "scripts": {
     "build": "rollup -c",
-    "cy:run": "cypress run",
-    "cy:open": "cypress open",
-    "test": "npm run build && node test/runtest.js",
-    "test:dev": "export MODE=dev && npm run build && node test/runtest.js",
-    "trpatcher": "export MODE=dev && npm run build && cd test/testrepo && node --unhandled-rejections=strict --enable-source-maps ../../bin/patcher.js"
+    "prepublish": "npm run build",
+    "pretest": "npm run build",
+    "test": "node test/run | tap-diff",
+    "trpatcher": "export MODE=dev && npm run build && node --unhandled-rejections=strict --enable-source-maps bin/patcher.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/sveltejs-translations/patcher.git"
+    "url": "git+https://github.com/AlexxNB/translation-patcher.git"
   },
   "author": "Alexey Schebelev",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/sveltejs-translations/patcher/issues"
+    "url": "https://github.com/AlexxNB/translation-patcher/issues"
   },
-  "homepage": "https://github.com/sveltejs-translations/patcher#readme",
+  "homepage": "https://github.com/AlexxNB/translation-patcher#readme",
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^7.1.1",
     "@rollup/plugin-replace": "^2.3.1",
-    "cypress": "^4.2.0",
     "rollup": "^1.32.1",
     "rollup-plugin-terser": "^5.3.0",
-    "shelljs.exec": "^1.1.8",
-    "wait-on": "^4.0.1"
+    "tap-diff": "^0.1.1",
+    "tape": "^4.13.2"
   },
   "dependencies": {
     "ansi-colors": "^4.1.1",
     "fetch-repo-dir": "^1.0.4",
     "fs-extra": "^9.0.0",
     "node-watch": "^0.6.3",
+    "prompts": "^2.3.2",
     "sade": "^1.7.3"
   }
 }
