--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "trpatcher": "bin/patcher.js"
   },
   "scripts": {
-    "build": "rollup -c",
+    "build": "node esbuild",
     "prepublish": "npm run build",
     "pretest": "npm run build",
     "test": "node test/run | tap-diff",
@@ -24,11 +24,9 @@
   },
   "homepage": "https://github.com/AlexxNB/translation-patcher#readme",
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "^7.1.1",
-    "@rollup/plugin-replace": "^2.3.1",
     "diff": "^4.0.1",
-    "rollup": "^1.32.1",
-    "rollup-plugin-terser": "^7.0.0",
+    "esbuild": "^0.14.16",
+    "esbuild-plugin-replace": "^1.2.0",
     "tap-diff": "^0.1.1",
     "tape": "^4.13.2"
   },
